--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
 
 <div class="container1">
     <!-- Content goes here -->
-    <h2>This is container 1</h2>
+    <h2>This is container A1</h2>
     <p>This is the first container.</p>
 </div>
 
 <div class="container2">
     <!-- Content goes here -->
-    <h2>This is container 2</h2>
+    <h2>This is container A2</h2>
     <p>This is the second container.</p>
 </div>
 
 <div class="container3">
     <!-- Content goes here -->
-    <h2>This is container 3</h2>
+    <h2>This is container A3</h2>
     <p>This is the third container.</p>
 </div>
 
