--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         background-color: #f0f0f0; /* Background color for container */
         border: 1px solid #ccc; /* Border for container */
         border-radius: 8px; /* Border radius to make it rounded */
-        background-color: red;
+        background-color: rgb(47, 198, 24);
     }
 
     .container2 {
@@ -45,13 +45,13 @@
       background-color: #f0f0f0; /* Background color for container */
       border: 1px solid #ccc; /* Border for container */
       border-radius: 8px; /* Border radius to make it rounded */
-      background-color:blue;
+      background-color:rgb(255, 0, 136);
   }
   .container3 {
     width: 50%; /* You can adjust the width as per your requirement */
     margin: 20px auto; /* Center align the container and add some space between containers */
     padding: 20px; /* Add some padding for content */
-    background-color: #ff2020; /* Background color for container */
+    background-color: #20cbff; /* Background color for container */
     border: 1px solid #ccc; /* Border for container */
     border-radius: 8px; /* Border radius to make it rounded */
     background-color:yellow;
@@ -67,6 +67,7 @@
 <div class="container1">
     <!-- Content goes here -->
     <h2>This is container A1</h2>
+    
     <p>This is the first container.</p>
 </div>
 
